Added comments, task_schedule, and some headers and footers to the output

--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -39,7 +39,8 @@ alert       jeanconn@head.cfa.harvard.edu
 <task schedule_view>
       cron       5,15,25,35,45,55 * * * *
       check_cron 15 8 * * * 
-      exec get_schedules.py
+      exec 1 : get_schedules.py
+      exec 1 : get_schedules.py --fileurls --outdir /proj/sot/ska/data/schedule_view/file_nav
       context 1      
       <check>
         <error>
