Set to run a couple of times a day

--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -37,7 +37,7 @@ alert       jeanconn@head.cfa.harvard.edu
 # example below, the commands are done once each 1, 2, and 4 minutes, respectively.
 
 <task schedule_view>
-      cron       5,15,25,35,45,55 * * * *
+      cron       5 9,15 * * *
       check_cron 15 8 * * * 
       exec 1 : get_schedules.py
       exec 1 : get_schedules.py --fileurls --outdir /proj/sot/ska/data/schedule_view/file_nav
